@@ -27,6 +27,9 @@ typedef struct md_acme_challenge_t md_acme_challenge_t;
 /**************************************************************************************************/
 /* authorization request for a specific domain name */
 
+#define MD_AUTHZ_TYPE_HTTP01        "http-01"
+#define MD_AUTHZ_TYPE_TLSSNI01      "tls-sni-01"
+
 typedef enum {
     MD_ACME_AUTHZ_S_UNKNOWN,
     MD_ACME_AUTHZ_S_PENDING,
@@ -39,6 +42,7 @@ typedef struct md_acme_authz_t md_acme_authz_t;
 struct md_acme_authz_t {
     const char *domain;
     const char *location;
+    const char *dir;
     md_acme_authz_state_t state;
     apr_time_t expires;
     struct md_json_t *resource;
@@ -84,10 +88,14 @@ apr_status_t md_acme_authz_set_remove(md_acme_authz_set_t *set, const char *doma
 struct md_json_t *md_acme_authz_set_to_json(md_acme_authz_set_t *set, apr_pool_t *p);
 md_acme_authz_set_t *md_acme_authz_set_from_json(struct md_json_t *json, apr_pool_t *p);
 
-apr_status_t md_acme_authz_set_load(struct md_store_t *store, const char *md_name, 
-                                    md_acme_authz_set_t **pauthz_set, apr_pool_t *p);
-apr_status_t md_acme_authz_set_save(struct md_store_t *store, apr_pool_t *p, const char *md_name, 
+apr_status_t md_acme_authz_set_load(struct md_store_t *store, md_store_group_t group, 
+                                    const char *md_name, md_acme_authz_set_t **pauthz_set, 
+                                    apr_pool_t *p);
+apr_status_t md_acme_authz_set_save(struct md_store_t *store, apr_pool_t *p, 
+                                    md_store_group_t group, const char *md_name, 
                                     md_acme_authz_set_t *authz_set, int create);
-apr_status_t md_acme_authz_set_purge(struct md_store_t *store, apr_pool_t *p, const char *md_name);
+
+apr_status_t md_acme_authz_set_purge(struct md_store_t *store, md_store_group_t group,
+                                     apr_pool_t *p, const char *md_name);
 
 #endif /* md_acme_authz_h */
