@@ -90,6 +90,8 @@ struct md_t {
 #define MD_KEY_CONTACTS         "contacts"
 #define MD_KEY_CSR              "csr"
 #define MD_KEY_DISABLED         "disabled"
+#define MD_KEY_DIR              "dir"
+#define MD_KEY_DOMAIN           "domain"
 #define MD_KEY_DOMAINS          "domains"
 #define MD_KEY_DRIVE_MODE       "drive-mode"
 #define MD_KEY_EXPIRES          "expires"
@@ -97,6 +99,7 @@ struct md_t {
 #define MD_KEY_IDENTIFIER       "identifier"
 #define MD_KEY_KEY              "key"
 #define MD_KEY_KEYAUTHZ         "keyAuthorization"
+#define MD_KEY_LOCATION         "location"
 #define MD_KEY_NAME             "name"
 #define MD_KEY_PROTO            "proto"
 #define MD_KEY_REGISTRATION     "registration"
